--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,5 +1,6 @@
 {% extends 'global/base.html' %}
 {% block content %}
+{% if Contacts %}
     <div class="responsive_table">
         <table class="contacts-table">
             <caption class="table-caption">
@@ -40,4 +41,10 @@
             </tbody>
         </table>
     </div>
+{% else %}
+<div class="single-contact">
+    <h1 class="single-contact-name">
+        Nenhum Contato encontrado
+    </h1>
+{% endif %}
 {% endblock content %}
