--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,6 +1,6 @@
 {% extends 'global/base.html' %}
 {% block content %}
-{% if Contacts %}
+{% if page_obj %}
     <div class="responsive_table">
         <table class="contacts-table">
             <caption class="table-caption">
@@ -17,7 +17,7 @@
             </thead>
 
             <tbody>
-                {% for contact in contacts %}
+                {% for contact in page_obj %}
                     <tr class="table-row">
                         <td class="table-cel">
                             <a href="{% url 'contact:contactt' contact.id %}" class="table-link">
