--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -6,7 +6,7 @@
     <h2>Contact</h2>
 
     <form 
-      action=""
+      action="{% url 'contact:create' %}"
       method="POST"
       enctype="multipart/form-data"
     >   
@@ -15,6 +15,10 @@
         <div class="form-group">
           <label for="id_first_name">LABEL</label>
           <input type="text" name="first_name" maxlength="255" id="id_first_name">
+        </div>
+        <div class="form-group">
+          <label for="id_last_name">LABEL</label>
+          <input type="text" name="last_name" maxlength="255" id="id_last_name">
         </div>
       </div>
 
