--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -11,16 +11,17 @@
       enctype="multipart/form-data"
     >   
         {% csrf_token %}
+
       <div class="form-content">
-        <div class="form-group">
-          <label for="id_first_name">LABEL</label>
-          <input type="text" name="first_name" maxlength="255" id="id_first_name">
-        </div>
-        <div class="form-group">
-          <label for="id_last_name">LABEL</label>
-          <input type="text" name="last_name" maxlength="255" id="id_last_name">
-        </div>
+        {% for field in form %}
+          <div class="form-group">
+            <label for="{{field.id_for_label}}">{{field.label}}</label>
+            {{field}}
+            {{field.errors}}
+          </div>
+        {% endfor %}
       </div>
+
 
       <div class="form-content">
         <div class="form-group">
