--- a/contact/templates/contact/register.html
+++ b/contact/templates/contact/register.html
@@ -5,36 +5,6 @@
 
     <h2>Register</h2>
 
-    <form 
-      action="{{form_content}}"
-      method="POST"
-      enctype="multipart/form-data"
-    >   
-        {% csrf_token %}
-
-      <div class="form-content">
-        {% for field in form %}
-          <div class="form-group">
-            <label for="{{field.id_for_label}}">{{field.label}}</label>
-            {{field}}
-            {{field.errors}}
-
-            {% if field.help_text %}
-              <p class='help-text'>{{field.help_text}}</p>  
-            {% endif %}
-
-
-          </div>
-        {% endfor %}
-      </div>
-
-
-      <div class="form-content">
-        <div class="form-group">
-          <button class="btn" type="submit">Send</button>
-        </div>
-      </div>
-
-    </form>
+    {% include 'contact/partials/user-form.html' %}
   </div>
 {% endblock content %}
